--- a/NODIVS/style.css
+++ b/NODIVS/style.css
@@ -1,32 +1,80 @@
 
-html{
-    background-color: black;
+.animatedBG{
+    animation-name: flowBG;
+    animation-duration: 40s;
+    animation-iteration-count: infinite;
 }
 
-h3{
+@keyframes flowBG{
+    0%  {
+        top: 0vw;
+    }
+    50% {
+        top: -50vw;
+    }
+    100% {
+        top: 0vw;
+    }
+}
+
+.grille {
     display: flex;
-    justify-content: center;
-    color: white;
+    flex-wrap: wrap;
+    border: 1px solid #000;
+    width: 500px;
+    height: 500px;
+    margin: 0 auto;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    background: url(ressources/background-black.png);
+    animation: background-defile 5s linear infinite;
+}
+
+@keyframes background-defile {
+    from {
+        background-position-y: 0px;
+    }
+    to {
+        background-position-y: 256px;
+    }
+}
+#bgstart{
+    background: url(/ressources/space.jpg);
+}
+
+a:link, a:visited {
+        background-color: rgba(255,255,255,0.08);
+        color: black;
+        padding: 14px 25px;
+        margin-left: 50%;
+        border: black 8px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+}
+
+h3 {
+    text-align: center;
+    margin: 20px 0;
+}
+.grille div {
     
+    width: 25px;
+    height: 25px;
 }
-
-.frontiere{
-    display: flex;
-    height: 640px;
-    width: 640px;
-    border: 6px solid white;
-    margin-left: 25%;
-    background-image: url(ressources/background-black.png);
-}
-
-.joueur{
-    position: absolute;
-    height: 40px;
-    width: 40px;
-    bottom: 86px;
-    left: 670px;
+.tireur {
+    background: url(ressources/vaisseau.png);
     transform: rotate(180deg);
-    background-image: url(ressources/vaisseau.png);
-    background-repeat: no-repeat;
+    background-position: center;
     background-size: contain;
+}
+.alien {
+    background: url(ressources/ennemies.png);
+    background-position: center;
+    background-size: contain;
+}
+.boom {
+    background-color: red;
+}
+.laser {
+    background-color: orange;
 }
