--- a/versiondiv/style.css
+++ b/versiondiv/style.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-wrap: wrap;
     border: 1px solid #000;
-    width: 500px;
-    height: 500px;
+    width: 700px;
+    height: 700px;
     margin: 0 auto;
     box-shadow: 0 2px 10px rgba(0,0,0,0.2);
     background: url(../ressources/background-black.png);
@@ -24,8 +24,8 @@ h3 {
     margin: 20px 0;
 }
 .grille div {
-    width: 25px;
-    height: 25px;
+    width: 35px;
+    height: 35px;
 }
 .tireur {
     background: url(../ressources/vaisseau.png);
@@ -39,8 +39,9 @@ h3 {
     background-size: contain;
 }
 .boom {
-    background-color: red;
+    background-image: url(../ressources/boom.png);
 }
 .laser {
-    background-color: orange;
+    background-image: url(../ressources/laser.png);
+    transform: rotate(-90deg);
 }
